--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2 class="section-title">Presentación</h2>
 
         <div class="video3d-container">
-            <video src="img/jim3d.mp4" autoplay muted loop playsinline></video>
+            <video src="img/JIM3D.mp4" autoplay muted loop playsinline></video>
         </div>
     </section>
 
@@ -140,3 +140,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
 </html>
+
