--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>RetroStage - Mundo Retro Arcade</title>
-  <meta name="description" content="RetroStage: portal de juegos retro en 8 bits. Catálogo, carrito persistente y contacto." />
+  <meta name="description" content="RetroStage: Tu portal hacia el pasado. Catálogo, carrito persistente y contacto." />
   <meta name="keywords" content="RetroStage, retro, 8bit, arcade, juegos" />
 
   <!-- Google Font 8-bit -->
@@ -140,4 +140,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
 </html>
+
 
