--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container d-flex align-items-center justify-content-between">
       <div class="brand d-flex flex-column">
         <div class="logo" aria-hidden="true">RetroStage</div>
-        <div class="site-title">Arcade · 8-bit · Classics</div>
+        <div class="site-title">Arcade · Classicos</div>
       </div>
 
       <nav class="main-nav" role="navigation" aria-label="Navegación principal">
@@ -140,5 +140,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
 </html>
+
 
 
