--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="inicio" class="hero text-center py-5" role="region" aria-label="Inicio">
       <div class="container">
         <h1 class="hero-title glitch" data-text="Bienvenido a RetroStage">Bienvenido a RetroStage</h1>
-        <p class="hero-subtitle lead">Tu portal arcade en 8 bits</p>
+        <p class="hero-subtitle lead">Tu portal hacia el pasado</p>
         <a class="btn-8bit" href="#catalogo">Ver Juegos</a>
       </div>
     </section>
@@ -140,6 +140,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
 </html>
+
 
 
 
