--- a/index.html
+++ b/index.html
@@ -135,11 +135,16 @@
 
 
   <!-- SCRIPTS -->
-  <script src="script.js" defer></script>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+
+  <script src="script.js"></script>  <!-- SIN defer -->
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
+
 
 
 
