Fix HTML formatting and structure
Signed-off-by: eliasmcorio <eliasmcorio@gmail.com>

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <!-- CART MODAL (unificado) -->
   <div id="cart-modal" class="modal-overlay oculto" role="dialog" aria-modal="true" aria-labelledby="cart-title">
-  <div class="modal cart-panel" role="document">
+  <div class="cart-panel" role="document">
     <header class="modal-header d-flex justify-content-between align-items-center">
       <h3 id="cart-title">🛒 Tu Carrito</h3>
       <button id="close-cart" class="close-btn" aria-label="Cerrar carrito">X</button>
@@ -144,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
